# spacepi-core

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .spacepi-format  .spacepi-format-regex  CMakeLists.txt  Directory.Build.props  Dockerfile  GroundStation.xml  README.md  backup.c  blinky-ip.service  encoder.h  led.c  main.c  spacepi-docker.sh  spacepi-target-docker.sh  timing.c  timing.h  vcpkg.json
blinky-ip/: CMakeLists.txt  backup.h  encoder.c  ips.c  ips.h  led.c  led.h  main.c  timing.c  timing.h
dashboard/: .editorconfig  CMakeLists.txt  README.md  SpacePi Dashboard.sln  SpacePi Dashboard.sln.in  build.gradle  nuget.config.in  settings.gradle
dashboard/FFAero.SpacePi.Dashboard.API/: CMakeLists.txt  Class1.cs  FFAero.SpacePi.Dashboard.API.csproj  INetworkAdapter.cs  IPlugin.cs  IPluginInstance.cs  IViewComponent.cs  PluginAttribute.cs  PluginContext.cs  PluginFactory.cs
dashboard/FFAero.SpacePi.Dashboard.Analyzer/: CMakeLists.txt  PluginGenerator.cs
dashboard/FFAero.SpacePi.Dashboard.Build/: APIPublishTask.cs  BuildToolTask.cs  CMakeLists.txt
dashboard/FFAero.SpacePi.Dashboard.BuildTool/: APIPublishTask.cs  BuildToolAttribute.cs  CMakeLists.txt  ConsoleLogger.cs  Entry.cs  IBuildTool.cs  ToolArgumentAttribute.cs
dashboard/FFAero.SpacePi.Dashboard.Core/: AssemblyInfo.cs  CMakeLists.txt  Class1.cs  FFAero.SpacePi.Dashboard.Core.csproj
dashboard/FFAero.SpacePi.Dashboard.UWP/: CMakeLists.txt  FFAero.SpacePi.Dashboard.UWP.wapproj  FFAero.SpacePi.Dashboard.UWP.wapproj.in  Package.appxmanifest
dashboard/FFAero.SpacePi.Dashboard.WPF/: App.xaml  App.xaml.cs  CMakeLists.txt  FFAero.SpacePi.Dashboard.WPF.csproj  MainWindow.xaml  MainWindow.xaml.cs
dashboard/FFAero.SpacePi.Dashboard.WPFMain/: CMakeLists.txt  Entry.cs  FFAero.SpacePi.Dashboard.WPFMain.csproj  FFAero.SpacePi.Dashboard.WPFMain.csproj.in
dashboard/SpacePi.Dashboard.API/: BindContextAttribute.cs  BindPluginAttribute.cs  BindSuperPluginAttribute.cs  BindWindowMenu.cs  BindWindowMenuAttribute.cs  BuildConfig.cs.in  CMakeLists.txt  CompileProtobufAttribute.cs  ContextBase.cs  DefaultWindowMenus.cs  GeneratePluginFactoryAttribute.cs  IContext.cs  IContextFactory.cs  IGraphicsLoader.cs  INetworkAdapter.cs  IPlugin.cs  IPluginFactory.cs  IPluginInstance.cs  IViewComponent.cs  IWidgetFactory.cs  IWidgetViewModelFactory.cs  IWindowFactory.cs  Plugin.cs  PluginAttribute.cs  PluginBinding.cs  PluginContext.cs  PluginFactory.cs  SpacePi.Dashboard.API.csproj  SuperPluginAttribute.cs  SuperPluginFactory.cs  WindowMenuFactory.cs  WindowMenuItem.cs  WindowMenuItemAttribute.cs
dashboard/SpacePi.Dashboard.Analyzer/: Analyzer.cs  AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  CMakeLists.txt  Context.cs  DebugLog.cs  DebugSourceGenerator.cs  Diag.cs  DiagnosticAnalyzer.cs  DiagnosticRegistrar.cs  Diagnostics.cs  Diagnostics.syntax.cs  Extensions.cs  GeneratorStream.cs  PluginGenerator.cs  ProtobufGenerator.cs  SourceGenerator.cs  SpacePi.Dashboard.Analyzer.csproj  Types.cs  Validator.cs
dashboard/SpacePi.Dashboard.Analyzer.API/: BindingAttributes.cs  BindingDictionaryKeyAttribute.cs  BindingFactoryArrayAttribute.cs  BindingFactoryAttribute.cs  BindingFactoryBoxerAttribute.cs  BindingFactoryLoaderAttribute.cs  BindingFactoryObjectAttribute.cs  BindingFactoryUnboxerAttribute.cs  BindingIDAttribute.cs  BindingMatchIDAttribute.cs  BindingParameterAttribute.cs  BindingPriorityAttribute.cs  BuildConfig.cs.in  CMakeLists.txt  CompileProtobufAttribute.cs  EntryPointAttribute.cs  GenerateBindingsAttribute.cs  IBoundFactory.cs  PrimitiveEqualityComparers.cs  SpacePi.Dashboard.Analyzer.API.csproj  SpacePi.Dashboard.Analyzer.API.items  StaticDictionary.cs  SubfactoryAttribute.cs
dashboard/SpacePi.Dashboard.Build/: APIPublishTask.cs  BuildToolTask.cs  CMakeLists.txt  SpacePi.Dashboard.Build.csproj
dashboard/SpacePi.Dashboard.BuildConfig/: BuildConfig.cs.in  CMakeLists.txt  SpacePi.Dashboard.BuildConfig.csproj  SpacePi.Dashboard.BuildConfig.csproj.in
dashboard/SpacePi.Dashboard.BuildTool/: APIPublishTask.cs  BuildToolAttribute.cs  CMakeLists.txt  ConsoleLogger.cs  Entry.cs  IBuildTool.cs  SpacePi.Dashboard.BuildTool.csproj  ToolArgumentAttribute.cs
dashboard/SpacePi.Dashboard.Core/: AssemblyInfo.cs  CMakeLists.txt  CoreContext.cs  CorePlugin.cs  CorePluginInstance.cs  SpacePi.Dashboard.Core.csproj
dashboard/SpacePi.Dashboard.Core.WPF/: App.xaml  App.xaml.cs  AssemblyInfo.cs  CMakeLists.txt  CorePlugin.cs  MainWindow.xaml  MainWindow.xaml.cs  SpacePi.Dashboard.Core.WPF.csproj
dashboard/SpacePi.Dashboard.Test/: CMakeLists.txt  SpacePi.Dashboard.Test.csproj  TestSerializeDeserialize.cs  TestTest.cs
dashboard/SpacePi.Dashboard.UWP/: CMakeLists.txt  Package.appxmanifest  SpacePi.Dashboard.UWP.wapproj  SpacePi.Dashboard.UWP.wapproj.in
dashboard/SpacePi.Dashboard.WPF/: App.xaml  App.xaml.cs  CMakeLists.txt  Entry.cs  GenerateBindings.cs  MainWindow.xaml  MainWindow.xaml.cs  PluginFactoryImpl.cs  SpacePi.Dashboard.WPF.csproj  SpacePi.Dashboard.WPF.items.in  SpacePi.Dashboard.WPF.props.in
dashboard/SpacePi.Dashboard.WPFMain/: CMakeLists.txt  Entry.cs  SpacePi.Dashboard.WPFMain.csproj  SpacePi.Dashboard.WPFMain.csproj.in
docs/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  SpacePi.rst  conf.py  getting-started.rst  index.rst  networking.rst  submodules.rst  troubleshooting.rst
docs/detailed/: architecture.rst  core-contrib.rst  getting-started.rst  (+2 more)
dtc/: CMakeLists.txt
format/: CMakeLists.txt  Entry.cs  SpacePi.Format.csproj  SpacePi.Format.sln.in  SpacePi.Format.targets.in
init/: CMakeLists.txt  GroundStation.xml
libspacepi/: CMakeLists.txt  README.md
platform-std/: CMakeLists.txt
router/: CMakeLists.txt
service-manager/: CMakeLists.txt  config.c  config.h  logger.c  logger.h  main.c  main.c.txt  program.c  program.h  program_list.txt  programlist.c  programlist.h  resolver.c  resolver.h  service-manager.service  service.c
setup-deploy-key/: CMakeLists.txt  README.md
spacepictl/: CMakeLists.txt
test/: BuildBeforeTest.cmake  CMakeLists.txt
(+974 files in other folders)
